<resources>
    <string name="app_name">NookApp</string>

    <string name="title_nook_app">Nook App</string>
    <string name="nookapp_conquistas">Conquistas</string>
    <string name="nookapp_criaturas">Criaturas</string>

    <string name="nookapp_insetos">Insetos</string>
    <string name="nookapp_peixes">Peixes</string>
    <string name="nookapp_marinhos">Animais Marinhos</string>
    <string name="back_description">voltar para home</string>
    <string name="checktextdescription">check</string>
    <string name="squeakoidtext">squeakoid</string>
    <string name="textdialogo">dialogo</string>
    <string name="sampledialogue">Eu não me importaria em ver os outros tipos de gyroids que existem, então você quer guardar os seus aqui com os meus?</string>
    <string name="descricao_resetti">Desenho do personagem Mr Resett. Ele é uma Topeira com capacete e uniforme de construtor civíl, e segura uma picareta na sua mão direita</string>
    <string name="em_obras">EM OBRAS</string>
    <string name="breve">Esta Página estará disponível em breve</string>
</resources>