<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/creme">

    <ImageView
        android:id="@+id/image_resetti"
        android:layout_width="@dimen/margin_200dp"
        android:layout_height="@dimen/margin_200dp"
        android:layout_marginTop="@dimen/margin_180dp"
        android:contentDescription="@string/descricao_resetti"
        android:src="@drawable/mr_resetti"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tittle_emobras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:textStyle="bold"
        android:textColor="@color/brown"
        android:textSize="@dimen/nookapp_font40"
        android:text="@string/em_obras"
        app:layout_constraintTop_toBottomOf="@id/image_resetti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/subtittle_breve"
        android:layout_width="@dimen/nookapp_zero_dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginHorizontal="@dimen/nookapp_80dp"
        android:textColor="@color/brown"
        android:textSize="@dimen/nookapp_font24"
        android:text="@string/breve"
        app:layout_constraintTop_toBottomOf="@id/tittle_emobras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>