<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.creatures.sea.SeaFragment"
    android:id="@+id/feat_page_sea"
    android:background="@drawable/bgcreatures">

    <TextView
        android:id="@+id/tv_creatures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nookapp_criaturas"
        android:textColor="@color/brown"
        android:textSize="@dimen/nookapp_font24"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/nookapp_80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_bugs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_100dp"
        android:layout_marginTop="@dimen/margin_42dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_creatures"
        app:layout_constraintEnd_toStartOf="@id/cv_fishes">

        <ImageView
            android:layout_width="@dimen/nookapp_80dp"
            android:layout_height="@dimen/nookapp_80dp"
            android:src="@drawable/bugsbutton"
            android:alpha="1"
            android:contentDescription="@string/nookapp_insetos" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_fishes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_100dp"
        android:layout_marginTop="@dimen/margin_42dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        app:layout_constraintStart_toEndOf="@id/cv_bugs"
        app:layout_constraintEnd_toStartOf="@id/cv_sea"
        app:layout_constraintTop_toBottomOf="@id/tv_creatures">

        <ImageView
            android:layout_width="@dimen/nookapp_80dp"
            android:layout_height="@dimen/nookapp_80dp"
            android:src="@drawable/fishbutton"
            android:alpha="1"
            android:contentDescription="@string/nookapp_peixes" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_sea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_100dp"
        android:layout_marginTop="@dimen/margin_42dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        app:layout_constraintStart_toEndOf="@id/cv_fishes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_creatures">

        <ImageView
            android:layout_width="@dimen/nookapp_80dp"
            android:layout_height="@dimen/nookapp_80dp"
            android:src="@drawable/seabutton"
            android:alpha="0.5"
            android:contentDescription="@string/nookapp_marinhos" />

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/pbLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/light_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_sea"
        android:visibility="visible"
        android:layout_width="@dimen/nookapp_zero_dp"
        android:layout_height="@dimen/nookapp_zero_dp"
        android:layout_marginTop="@dimen/nookapp_30dp"
        android:layout_marginStart="@dimen/nookapp_30dp"
        android:layout_marginEnd="@dimen/nookapp_30dp"
        android:layout_marginBottom="@dimen/margin_12dp"
        android:paddingEnd="@dimen/margin_12dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/iv_backbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_fishes"
        android:orientation="horizontal"
        android:fadeScrollbars="true"
        android:scrollbarSize="10dp"
        android:scrollbarThumbHorizontal="@color/light_brown"
        android:scrollbars="horizontal"
        app:spanCount="6"
        tools:itemCount="80"
        tools:listitem="@layout/creature_item" />

    <ImageView
        android:id="@+id/iv_backbutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/backbuttonicon"
        android:layout_marginStart="@dimen/margin_42dp"
        android:layout_marginBottom="@dimen/margin_42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back_description" />

</androidx.constraintlayout.widget.ConstraintLayout>