<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gyroids.GyroidsFragment"
    android:id="@+id/feat_page_gyroids"
    android:background="@color/creme">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gyroidsImages"
        android:visibility="visible"
        android:layout_width="@dimen/nookapp_zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nookapp_80dp"
        android:layout_marginStart="@dimen/nookapp_30dp"
        android:layout_marginEnd="@dimen/nookapp_30dp"
        android:layout_marginBottom="@dimen/margin_12dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/rv_gyroidsList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:fadeScrollbars="true"
        android:scrollbarSize="10dp"
        android:scrollbarThumbHorizontal="@color/light_brown"
        android:scrollbars="horizontal"
        app:spanCount="1"
        tools:itemCount="7"
        tools:listitem="@layout/gyroid_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gyroidsList"
        android:visibility="visible"
        android:layout_width="@dimen/nookapp_zero_dp"
        android:layout_height="@dimen/nookapp_zero_dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginStart="@dimen/nookapp_30dp"
        android:layout_marginEnd="@dimen/nookapp_30dp"
        android:layout_marginBottom="@dimen/margin_12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/iv_brewsterdialogue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_gyroidsImages"
        android:orientation="vertical"
        android:fadeScrollbars="true"
        android:scrollbarSize="10dp"
        android:scrollbarThumbVertical="@color/light_brown"
        android:scrollbars="vertical"
        app:spanCount="1"
        tools:itemCount="7"
        tools:listitem="@layout/gyroidlist_item" />
    
    <ImageView
        android:id="@+id/iv_brewsterdialogue"
        android:layout_width="340dp"
        android:layout_height="160dp"
        android:src="@drawable/brewsterdialogue"
        android:layout_marginVertical="@dimen/margin_12dp"
        app:layout_constraintTop_toBottomOf="@id/rv_gyroidsList"
        app:layout_constraintBottom_toTopOf="@id/iv_backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/textdialogo" />

    <TextView
        android:id="@+id/tv_dialogue"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:gravity="center|start"
        android:text="@string/sampledialogue"
        android:textColor="@color/brown"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/iv_backbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_gyroidsList"
        app:layout_constraintVertical_bias="0.604" />

    <ImageView
        android:id="@+id/iv_backbutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/backbuttonicon"
        android:layout_marginStart="@dimen/margin_42dp"
        android:layout_marginBottom="@dimen/margin_42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back_description" />

    <ProgressBar
        android:id="@+id/pbLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/light_blue"
        android:layout_marginTop="@dimen/nookapp_80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>